# rcal-toolbox

./: .gitignore  README.md  build_and_run.sh  example_rmds.py  example_toa.py  proof_l1_vs_l2.py  pyproject.toml  setup.cfg  setup.py
rcbox/: __init__.py  rmds.py  rmds_cythoned.c  rmds_cythoned.pyx  rtdoa.h  rtdoa.py  rtdoa_cythoned.c  rtdoa_cythoned.pyx  setup.py  utils.py
rcbox.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
rcbox/unit_tests/: utest_rmds.py
scripts/: example_rmds.py  example_tdoa.py
tests/: utest_rmds.py  utest_rono.py
