[metadata]
name = rcbox
version = 1.0
author = Institut Jean le Rond d''Alembert - Equipe MPIA - Groupe Megamicros
author_email = regis.marchiano@sorbonne-universite.fr
url = https://www.dalembert.upmc.fr/mpia/
platforms = Linux, Mac OS X
description = Projet LAVU : interface homme-machine
keywords = microphone array, MEMS, acoustics, beamforming
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.6.1
setup_requires =
    setuptools >= 38.3.0
packages = 
    rcbox
    # find:
install_requires =
    numpy
    scipy
    matplotlib
    pytest

