[metadata]
name = rcbox
version = 1.0
author = Charles Vanwynsberghe
author_email = charles.vanwynsberghe@outlook.fr
url = https://github.com/cvanwynsberghe/rcal-toolbox/
platforms = Linux, Mac OS X
description = A toolbox for robust sensor arrays geometric calibration, by outlier-aware iterative solvers.
keywords = microphone arrays, inverse problem, signal processing
classifiers=
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.6.1
setup_requires =
    setuptools >= 38.3.0
packages = 
    rcbox
    # find:
install_requires =
    numpy
    scipy
    matplotlib
    pytest

